--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <hr>
 <br />
 
-	<img src=TENORg.png alt="Tenor Logo" width=180 />
+	<a href="https://www.tenor-conference.org" alt=Tenor> <img src=TENORg.png alt="Tenor Logo" width=180 /></a>
 
 </body>
 </html>
