--- a/tenor2019/index.html
+++ b/tenor2019/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="refresh" content="0; URL=/tenor2019/">
+	<meta http-equiv="refresh" content="0; URL=tenor2019/home.html">
 </head>
 
 <body>
